--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
+    "file-loader": "^6.2.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.11",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -48,6 +50,7 @@
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.3",
     "typescript-plugin-css-modules": "^2.8.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
