--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.11",
     "@types/hookrouter": "^2.2.3",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
@@ -50,6 +52,7 @@
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^6.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.3",
     "typescript-plugin-css-modules": "^2.8.0",
