--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Artem Geroyan <geroyan.artem@mail.ru>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^20.0.3",
+    "@hapi/inert": "^6.0.3",
     "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
     "file-loader": "^6.2.0",
+    "handlebars": "^4.7.6",
     "hookrouter": "^1.2.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
@@ -59,7 +62,8 @@
     "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "husky": {
     "hooks": {
